--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,243 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  margin: 0 auto;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #ffffff;
+  width: 100%;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.navbar-container {
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 15%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  margin-bottom: 20px;
+}
+
+.submit-button {
+  margin-bottom: 5px;
+}
+
+.app-name {
+  color: white;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.form-label {
+  color: hsl(210, 100%, 20%);
+}
+
+.recipe-box {
+  width: 70%;
+  margin: 0 auto;
+  background-color: #eaf2e3;
+  border-radius: 15px;
+  margin-bottom: 20px;
+  color: black;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  text-align: left;
+}
+
+.recipe-box h2 {
+  text-align: center;
+}
+
+.recipe-box .recipe-name {
+  color: #3c91e6;
+  text-shadow: 3px 3px 3px #e2dad5;
+  margin: 15px 20px;
+}
+
+.type-age-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.recipe-type {
+  color: #10c8cd;
+  margin-left: 10px;
+}
+
+h5[class^="age-recipe-"] {
+  color: white;
+  width: 40px;
+  line-height: 40px;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 23px;
+  margin-left: 30px;
+}
+
+.age-recipe-5 {
+  border: 1px dashed #009e60;
+  background-color: #2db98a;
+}
+
+.age-recipe-7 {
+  border: 1px dashed #2e282a;
+  background-color: #3c91e6;
+}
+
+.age-recipe-9 {
+  border: 1px dashed #a7165a;
+  background-color: orange;
+}
+
+h5[class^="type-recipe-"] {
+  line-height: 50px;
+  text-align: center;
+  font-size: 24px;
+  margin-left: 20px;
+}
+
+.type-recipe-Abendbrei {
+  color: orange;
+}
+
+.type-recipe-Mittagsbrei {
+  color: blue;
+}
+
+.type-recipe-Nachmittagsbrei {
+  color: green;
+}
+
+.type-age-container {
+  justify-content: flex-start;
+}
+
+img[class^="recipe-img"] {
+  width: 150px;
+  margin-right: 20px;
+  border-radius: 50%;
+}
+
+/* Page 2 CSS */
+.page-two-container {
+  margin: 0 auto;
+  text-align: left;
+  width: 70%;
+}
+
+.tg {
+  border-collapse: collapse;
+  border-spacing: 0;
+  border-color: #9abad9;
+  margin: 0px auto;
+  width: 90%;
+}
+.tg td {
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  padding: 10px 5px;
+  border-style: solid;
+  border-width: 1px;
+  overflow: hidden;
+  word-break: normal;
+  border-color: #9abad9;
+  color: #444;
+  background-color: #ebf5ff;
+}
+.tg th {
+  font-family: Arial, sans-serif;
+  font-size: 12px;
+  font-weight: normal;
+  padding: 10px 5px;
+  border-style: solid;
+  border-width: 1px;
+  overflow: hidden;
+  word-break: normal;
+  border-color: #9abad9;
+  color: #fff;
+  background-color: #409cff;
+  width: 50px;
+}
+.tg .tg-cly1 {
+  text-align: left;
+  vertical-align: middle;
+}
+.tg .tg-kdgo {
+  font-size: 12px;
+  font-family: Verdana, Geneva, sans-serif !important;
+  text-align: left;
+  vertical-align: top;
+}
+.tg .tg-0lax {
+  text-align: left;
+  vertical-align: top;
+}
+.tg .tg-kkak {
+  font-size: 12px;
+  font-family: Verdana, Geneva, sans-serif !important;
+  color: #000000;
+  text-align: left;
+  vertical-align: top;
+}
+
+.tg caption {
+  font-size: 16px;
+}
+
+.footer-container {
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 15%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  color: white;
+}
+
+.span-element {
+  font-size: 40px;
+  margin-right: 20px;
+}
+@media (max-width: 992px) {
+  .form-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .submit-button {
+    margin-top: 10px;
+  }
+
+  .recipe-box {
+    width: 95%;
+    flex-direction: column;
+  }
+
+  .recipe-img {
+    margin-bottom: 10px;
+  }
+
+  .breiart {
+    margin-top: 10px;
+  }
+
+  .tg {
+    width: 100%;
+    margin: auto;
+    font-size: 5px;
+  }
 }
